--- a/Media/03_Inference.ipynb
+++ b/Media/03_Inference.ipynb
@@ -20,7 +20,7 @@
     "1. [Batch Recommendations](#batch)\n",
     "1. [Wrap Up](#wrapup)\n",
     "\n",
-    "To run this notebook, you need to have run the previous notebooks, [`01_Data_Layer.ipynb`](01_Data_Layer.ipynb), and [`02_Training_Layer.ipynb`](02_Training_Layer.ipynb), where you created a dataset and imported interaction, item, and user metadata data into Amazon Personalize, created recommenders, solutions and campaigns.\n",
+    "To run this notebook, you need to have run the previous notebooks, [`01_Data.ipynb`](01_Data.ipynb), and [`02_Training.ipynb`](02_Training.ipynb), where you created a dataset and imported interaction, item, and user metadata data into Amazon Personalize, created recommenders, solutions and campaigns.\n",
     "\n",
     "## Introduction <a class=\"anchor\" id=\"intro\"></a>\n",
     "[Back to top](#top)\n",
@@ -81,10 +81,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "First, let's create a supporting function to help make sense of the results returned by a Personalize recommender or campaign. Personalize returns only an `item_id`, and potentially information about whether that item was part of a promotion filter. This is great for keeping data compact, but it means you need to query a database or lookup table to get a human-readable result for the notebooks. We will create a helper function to return a human-readable result from the Movielens dataset.\n",
-    "\n",
-    "NOTE: If you want to lookup information as part of the API request, consider implementing Real-Time Personalization APIs - https://github.com/aws-samples/personalization-apis.\n",
-    "\n",
     "Start by loading in the dataset which we can use for our lookup table."
    ]
   },
@@ -105,7 +101,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "By defining the ID column as the index column it is trivial to return a movie by just querying the ID. Movie tt0095016 should be Die Hard (https://www.imdb.com/title/tt0095016/). Since we are now using the IMDb ID as our common identifier, you can replace this movie with any IMDb ID that is included in the dataset."
+    "By defining the ID column as the index column it is easy to return a movie by just querying the ID. "
    ]
   },
   {
@@ -114,67 +110,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "movieIdExample = 'tt0095016'\n",
-    "title = items_df.loc[movieIdExample]['TITLE']\n",
+    "movie_id_example = 'tt0095016'\n",
+    "title = items_df.loc[movie_id_example]['TITLE']\n",
     "print(title)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "That isn't terrible, but it would get messy to repeat this everywhere in our code, so the function below will clean that up."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def get_movie_by_id(movieId, movie_df=items_df):\n",
-    "    \"\"\"\n",
-    "    This takes in an artist_id from Personalize so it will be a string,\n",
-    "    converts it to an int, and then does a lookup in a default or specified\n",
-    "    dataframe.\n",
-    "    \n",
-    "    A really broad try/except clause was added in case anything goes wrong.\n",
-    "    \n",
-    "    Feel free to add more debugging or filtering here to improve results if\n",
-    "    you hit an error.\n",
-    "    \"\"\"\n",
-    "    try:\n",
-    "        return movie_df.loc[movieId]['TITLE']\n",
-    "    except:\n",
-    "        return \"Error obtaining title\""
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Now let's test a few simple values to check our error catching."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# A known good id (The Princess Bride)\n",
-    "print(get_movie_by_id(movieId=\"tt0095016\"))\n",
-    "# A bad type of value\n",
-    "print(get_movie_by_id(movieId=\"987.9393939\"))\n",
-    "# Really bad values\n",
-    "print(get_movie_by_id(movieId=\"Steve\"))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Great! Now we have a way of rendering results. "
    ]
   },
   {
@@ -212,7 +150,7 @@
    "outputs": [],
    "source": [
     "# First pick a user\n",
-    "testUserId = \"1\""
+    "test_user_id = \"1\""
    ]
   },
   {
@@ -225,6 +163,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's use the capability of Amazon Personalize to return item metadata to get the movie title."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -232,9 +177,12 @@
    "source": [
     "get_recommendations_response = personalize_runtime.get_recommendations(\n",
     "    recommenderArn = workshop_recommender_more_like_x_arn,\n",
-    "    itemId = 'tt0095016',\n",
-    "    userId = testUserId,\n",
-    "    numResults = 20\n",
+    "    itemId = movie_id_example,\n",
+    "    userId = test_user_id,\n",
+    "    numResults = 20,\n",
+    "    metadataColumns = {\n",
+    "            \"ITEMS\": ['TITLE']\n",
+    "        }\n",
     ")"
    ]
   },
@@ -267,11 +215,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "itemList = get_recommendations_response['itemList']\n",
-    "print(\"If you liked \" + get_movie_by_id('tt0095016') + \", you may also like:\")\n",
+    "item_list = get_recommendations_response['itemList']\n",
+    "print(\"If you liked \" + items_df.loc[movie_id_example]['TITLE'] + \", you may also like:\")\n",
     "print()\n",
-    "for item in itemList:\n",
-    "    print(get_movie_by_id(movieId=item['itemId']))"
+    "for item in item_list:\n",
+    "    print(item['metadata']['title']))"
    ]
   },
   {
@@ -292,19 +240,22 @@
     "\n",
     "def get_new_recommendations_df(recommendations_df, movie_id, user_id):\n",
     "    # Get the movie name\n",
-    "    movie_name = get_movie_by_id(movie_id)\n",
+    "    movie_name = items_df.loc[movie_id_example]['TITLE']\n",
     "    # Get the recommendations\n",
     "    get_recommendations_response = personalize_runtime.get_recommendations(\n",
     "        recommenderArn = workshop_recommender_more_like_x_arn,\n",
     "        itemId = str(movie_id),\n",
     "        userId = user_id,\n",
-    "        numResults = 15\n",
+    "        numResults = 15,\n",
+    "        metadataColumns = {\n",
+    "            \"ITEMS\": ['TITLE']\n",
+    "        }\n",
     "    )\n",
     "    # Build a new dataframe of recommendations\n",
-    "    itemList = get_recommendations_response['itemList']\n",
+    "    item_list = get_recommendations_response['itemList']\n",
     "    recommendation_list = []\n",
-    "    for item in itemList:\n",
-    "        movie = get_movie_by_id(item['itemId'])\n",
+    "    for item in item_list:\n",
+    "        movie = item['metadata']['title'])\n",
     "        recommendation_list.append(movie)\n",
     "    new_rec_df = pd.DataFrame(recommendation_list, columns = [movie_name])\n",
     "    # Add this dataframe to the old one\n",
@@ -400,19 +351,21 @@
     "pd.set_option('display.max_rows', 30)\n",
     "\n",
     "def get_new_recommendations_df_users(recommendations_df, user_id):\n",
-    "    # Get the movie name\n",
-    "    #movie_name = get_movie_by_id(artist_ID)\n",
+    "\n",
     "    # Get the recommendations\n",
     "    get_recommendations_response = personalize_runtime.get_recommendations(\n",
     "        recommenderArn = workshop_recommender_top_picks_arn,\n",
     "        userId = str(user_id),\n",
-    "        numResults = 15\n",
+    "        numResults = 15,\n",
+    "        metadataColumns = {\n",
+    "                \"ITEMS\": ['TITLE']\n",
+    "        }\n",
     "    )\n",
     "    # Build a new dataframe of recommendations\n",
-    "    itemList = get_recommendations_response['itemList']\n",
+    "    item_list = get_recommendations_response['itemList']\n",
     "    recommendation_list = []\n",
-    "    for item in itemList:\n",
-    "        movie = get_movie_by_id(item['itemId'])\n",
+    "    for item in item_list:\n",
+    "        movie = item['metadata']['title']\n",
     "        recommendation_list.append(movie)\n",
     "    new_rec_df = pd.DataFrame(recommendation_list, columns = [user_id])\n",
     "    # Add this dataframe to the old one\n",
@@ -472,7 +425,7 @@
     "rerank_items = items_df.sample(15).index.tolist()\n",
     "rerank_list = []\n",
     "for item in rerank_items:\n",
-    "    movie = get_movie_by_id(item)\n",
+    "    movie = item['metadata']['title']\n",
     "    rerank_list.append(movie)\n",
     "rerank_df = pd.DataFrame(rerank_list, columns = ['Un-Ranked'])\n",
     "rerank_df"
@@ -499,7 +452,10 @@
     "get_recommendations_response_rerank = personalize_runtime.get_personalized_ranking(\n",
     "        campaignArn = workshop_rerank_campaign_arn,\n",
     "        userId = str(rerank_user),\n",
-    "        inputList = rerank_item_list\n",
+    "        inputList = rerank_item_list,\n",
+    "        metadataColumns = {\n",
+    "                \"ITEMS\": ['TITLE']\n",
+    "        }\n",
     ")"
    ]
   },
@@ -519,7 +475,7 @@
     "ranked_list = []\n",
     "item_list = get_recommendations_response_rerank['personalizedRanking']\n",
     "for item in item_list:\n",
-    "    movie = get_movie_by_id(item['itemId'])\n",
+    "    movie = item['metadata']['title']\n",
     "    ranked_list.append(movie)\n",
     "ranked_df = pd.DataFrame(ranked_list, columns = ['Re-Ranked'])\n",
     "rerank_df = pd.concat([rerank_df, ranked_df], axis=1)\n",
@@ -872,20 +828,22 @@
     "pd.set_option('display.max_rows', 30)\n",
     "\n",
     "def get_new_recommendations_w_promotions_only_df_users(recommendations_df, user_id):\n",
-    "    # Get the movie name\n",
-    "    #movie_name = get_movie_by_id(artist_ID)\n",
+    "\n",
     "    # Get the recommendations\n",
     "    get_recommendations_response = personalize_runtime.get_recommendations(\n",
     "        recommenderArn = workshop_recommender_top_picks_arn,\n",
     "        userId = str(user_id),\n",
     "        filterArn = promotion_filter_arn,\n",
     "        numResults = 15,\n",
+    "        metadataColumns = {\n",
+    "            \"ITEMS\": ['TITLE']\n",
+    "        }\n",
     "    )\n",
     "    # Build a new dataframe of recommendations\n",
     "    itemList = get_recommendations_response['itemList']\n",
     "    recommendation_list = []\n",
     "    for item in itemList:\n",
-    "        movie = get_movie_by_id(item['itemId'])\n",
+    "        movie = item['metadata']['title']\n",
     "        recommendation_list.append(movie)\n",
     "    new_rec_df = pd.DataFrame(recommendation_list, columns = [user_id])\n",
     "    # Add this dataframe to the old one\n",
@@ -933,8 +891,6 @@
     "pd.set_option('display.max_rows', 30)\n",
     "\n",
     "def get_new_recommendations_w_promotions_df_users(recommendations_df, user_id):\n",
-    "    # Get the movie name\n",
-    "    #movie_name = get_movie_by_id(artist_ID)\n",
     "    # Get the recommendations\n",
     "    get_recommendations_response = personalize_runtime.get_recommendations(\n",
     "        recommenderArn = workshop_recommender_top_picks_arn,\n",
@@ -944,14 +900,17 @@
     "        \"name\" : \"vegas_promotion\",\n",
     "        \"percentPromotedItems\" : 30,\n",
     "        \"filterArn\": promotion_filter_arn,\n",
-    "        }]\n",
+    "        }],\n",
+    "        metadataColumns = {\n",
+    "            \"ITEMS\": ['TITLE']\n",
+    "        }\n",
     "    )\n",
     "    # Build a new dataframe of recommendations\n",
     "    itemList = get_recommendations_response['itemList']\n",
     "    promotion_list = []\n",
     "    recommendation_list = []\n",
     "    for item in itemList:\n",
-    "        movie = get_movie_by_id(item['itemId'])\n",
+    "        movie = item['metadata']['title']\n",
     "        try: \n",
     "            item[\"promotionName\"]\n",
     "            promotion_list.append('Y')\n",
@@ -1015,13 +974,16 @@
     "        userId = str(user_id),\n",
     "        filterArn = year_range_filter_arn,\n",
     "        filterValues = {\"YEAR1\": filter_value1,\"YEAR2\": filter_value2},\n",
-    "        numResults = 15\n",
+    "        numResults = 15,\n",
+    "        metadataColumns = {\n",
+    "            \"ITEMS\": ['TITLE']\n",
+    "        }\n",
     "    )\n",
     "    # Build a new dataframe of recommendations\n",
     "    item_list = get_recommendations_response['itemList']\n",
     "    recommendation_list = []\n",
     "    for item in item_list:\n",
-    "        movie = get_movie_by_id(item['itemId'])\n",
+    "        movie = item['metadata']['title']\n",
     "        recommendation_list.append(movie)\n",
     "    filter_name = year_range_filter_arn.split('/')[1]\n",
     "    new_rec_DF = pd.DataFrame(recommendation_list, columns = [filter_value1])\n",
@@ -1082,13 +1044,16 @@
     "        userId = str(user_id),\n",
     "        filterArn = genre_filter_arn,\n",
     "        filterValues = { \"GENRE\": \"\\\"\" + filter_values + \"\\\"\"},\n",
-    "        numResults = 15\n",
+    "        numResults = 15,\n",
+    "        metadataColumns = {\n",
+    "            \"ITEMS\": ['TITLE']\n",
+    "        }\n",
     "    )\n",
     "    # Build a new dataframe of recommendations\n",
     "    item_list = get_recommendations_response['itemList']\n",
     "    recommendation_list = []\n",
     "    for item in item_list:\n",
-    "        movie = get_movie_by_id(item['itemId'])\n",
+    "        movie = item['metadata']['title']\n",
     "        recommendation_list.append(movie)\n",
     "    filter_name = genre_filter_arn.split('/')[1]\n",
     "    new_rec_DF = pd.DataFrame(recommendation_list, columns = [filter_values])\n",
@@ -1300,27 +1265,30 @@
     "        }]\n",
     "    )\n",
     "\n",
-    "def get_new_recommendations_df_users_real_time(recommendations_df, userId, itemId, eventType):\n",
+    "def get_new_recommendations_df_users_real_time(recommendations_df, user_id, item_id, event_type):\n",
     "    # Get the artist name (header of column)\n",
-    "    movieName = get_movie_by_id(itemId)\n",
+    "    movie_name = items_df.loc[movie_id_example]['TITLE']\n",
     "    \n",
     "    # Interact with different movies\n",
-    "    print('sending event ' + eventType + ' for ' + get_movie_by_id(itemId))\n",
-    "    send_movie_click(userId=userId, itemId=itemId,eventType=eventType)\n",
+    "    print('sending event ' + eventType + ' for ' + movie_name)\n",
+    "    send_movie_click(userId=user_id, itemId=item_id,eventType=event_type)\n",
     "    # Get the recommendations (note you should have a base recommendation DF created before)\n",
     "    time.sleep(2)\n",
     "    get_recommendations_response = personalize_runtime.get_recommendations(\n",
     "        recommenderArn = workshop_recommender_top_picks_arn,\n",
-    "        userId = str(userId),\n",
-    "        numResults = 15\n",
+    "        userId = str(user_id),\n",
+    "        numResults = 15,\n",
+    "        metadataColumns = {\n",
+    "            \"ITEMS\": ['TITLE']\n",
+    "        }\n",
     "    )\n",
     "    # Build a new dataframe of recommendations\n",
-    "    itemList = get_recommendations_response['itemList']\n",
+    "    item_list = get_recommendations_response['itemList']\n",
     "    recommendation_list = []\n",
-    "    for item in itemList:\n",
-    "        artist = get_movie_by_id(item['itemId'])\n",
-    "        recommendation_list.append(artist)\n",
-    "    new_rec_df = pd.DataFrame(recommendation_list, columns = [movieName])\n",
+    "    for item in item_list:\n",
+    "        movie = item['metadata']['title']\n",
+    "        recommendation_list.append(movie)\n",
+    "    new_rec_df = pd.DataFrame(recommendation_list, columns = [movie_mame])\n",
     "    # Add this dataframe to the old one\n",
     "    #recommendations_df = recommendations_df.join(new_rec_DF)\n",
     "    recommendations_df = pd.concat([recommendations_df, new_rec_df], axis=1)\n",
@@ -1344,15 +1312,18 @@
     "get_recommendations_response = personalize_runtime.get_recommendations(\n",
     "        recommenderArn = workshop_recommender_top_picks_arn,\n",
     "        userId = str(rerank_user),\n",
-    "        numResults = 15\n",
+    "        numResults = 15,\n",
+    "        metadataColumns = {\n",
+    "            \"ITEMS\": ['TITLE']\n",
+    "        }\n",
     "    )\n",
     "\n",
     "# Build a new dataframe for the recommendations\n",
     "itemList = get_recommendations_response['itemList']\n",
     "recommendationList = []\n",
     "for item in item_list:\n",
-    "    artist = get_movie_by_id(item['itemId'])\n",
-    "    recommendationList.append(artist)\n",
+    "    movie = item['metadata']['title']\n",
+    "    recommendationList.append(movie)\n",
     "user_recommendations_df = pd.DataFrame(recommendationList, columns = [rerank_user])\n",
     "user_recommendations_df"
    ]
@@ -1443,7 +1414,7 @@
     "    item_list = get_recommendations_response['personalizedRanking']\n",
     "    recommendation_list = []\n",
     "    for item in item_list:\n",
-    "        movie = get_movie_by_id(item['itemId'])\n",
+    "        movie = item['metadata']['title']\n",
     "        recommendation_list.append(movie)\n",
     "\n",
     "    filter_name = filter_arn.split('/')[1]\n",
@@ -1490,7 +1461,7 @@
     "item_list = ranked_unwatched_recommendations_response['personalizedRanking'][:4]\n",
     "\n",
     "for item in item_list:\n",
-    "    print('sending event Watch for ' + get_movie_by_id(item['itemId']))\n",
+    "    print('sending event Watch for ' + item['metadata']['title'])\n",
     "    send_movie_click(userId=rerank_user, itemId=item['itemId'], eventType='Watch')\n",
     "    time.sleep(5)"
    ]
@@ -1561,7 +1532,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.12"
+   "version": "3.10.13"
   }
  },
  "nbformat": 4,
