--- a/Media/01_Data.ipynb
+++ b/Media/01_Data.ipynb
@@ -189,7 +189,7 @@
    "outputs": [],
    "source": [
     "# Opening JSON file\n",
-    "f = open('./pretrain/params.json')\n",
+    "f = open('./params.json')\n",
     "parameters = json.load(f)"
    ]
   },
