updated the notebook

--- a/Media/03_Inference.ipynb
+++ b/Media/03_Inference.ipynb
@@ -219,7 +219,7 @@
     "print(\"If you liked \" + items_df.loc[movie_id_example]['TITLE'] + \", you may also like:\")\n",
     "print()\n",
     "for item in item_list:\n",
-    "    print(item['metadata']['title']))"
+    "    print(item['metadata']['title'])"
    ]
   },
   {
@@ -251,35 +251,19 @@
     "            \"ITEMS\": ['TITLE']\n",
     "        }\n",
     "    )\n",
-    "    # Build a new dataframe of recommendations\n",
+    "    # Builda new dataframe of recommendations\n",
     "    item_list = get_recommendations_response['itemList']\n",
     "    recommendation_list = []\n",
     "    for item in item_list:\n",
-    "        movie = item['metadata']['title'])\n",
-    "        recommendation_list.append(movie)\n",
+    "        try:\n",
+    "            movie = item['metadata']['title']\n",
+    "            recommendation_list.append(movie)\n",
+    "        except:\n",
+    "            pass\n",
     "    new_rec_df = pd.DataFrame(recommendation_list, columns = [movie_name])\n",
     "    # Add this dataframe to the old one\n",
     "    recommendations_df = pd.concat([recommendations_df, new_rec_df], axis=1)\n",
     "    return recommendations_df"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Now, let's test the helper function with several different movies. Let's sample some data from our dataset to test our \"More like X\" Recommender. Grab 5 random movies from our dataframe.\n",
-    "\n",
-    "Note: We are going to show similar titles, so you may want to re-run the sample until you recognize some of the movies listed"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "samples = items_df.sample(5)\n",
-    "samples"
    ]
   },
   {
@@ -292,7 +276,7 @@
     "movies = samples.index.tolist()\n",
     "\n",
     "for movie in movies:\n",
-    "    more_like_x_recommendations_df = get_new_recommendations_df(more_like_x_recommendations_df, movie, testUserId)\n",
+    "    more_like_x_recommendations_df = get_new_recommendations_df(more_like_x_recommendations_df, movie, test_user_id)\n",
     "\n",
     "more_like_x_recommendations_df"
    ]
@@ -425,7 +409,7 @@
     "rerank_items = items_df.sample(15).index.tolist()\n",
     "rerank_list = []\n",
     "for item in rerank_items:\n",
-    "    movie = item['metadata']['title']\n",
+    "    movie = items_df.loc[item]['TITLE']\n",
     "    rerank_list.append(movie)\n",
     "rerank_df = pd.DataFrame(rerank_list, columns = ['Un-Ranked'])\n",
     "rerank_df"
@@ -1182,7 +1166,7 @@
     "    describe_event_tracker_response = personalize.describe_event_tracker(\n",
     "        eventTrackerArn=event_tracker_arn\n",
     "    )\n",
-    "    trackingId = describe_event_tracker_response['eventTracker']['trackingId']\n",
+    "    tracking_id = describe_event_tracker_response['eventTracker']['trackingId']\n",
     "    \n",
     "    print ('\\nThe the Event Tracker with event_tracker_name {} already exists'.format(event_tracker_name))\n",
     "    print ('\\nWe will be using the existing Event Tracker with event_tracker_arn = {}'.format(event_tracker_arn))\n",
@@ -1234,33 +1218,34 @@
    "source": [
     "sessionDict = {}\n",
     "\n",
-    "def send_movie_click(userId, itemId, eventType):\n",
+    "def send_movie_click(user_id, item_id, event_type):\n",
     "    \"\"\"\n",
     "    Simulates a click as an envent\n",
     "    to send an event to Amazon Personalize's Event Tracker\n",
     "    \"\"\"\n",
     "    # Configure Session\n",
+    "    session_dict = {}\n",
     "    try:\n",
-    "        sessionId = sessionDict[str(userId)]\n",
+    "        session_id = sessionDict[str(user_id)]\n",
     "    except:\n",
-    "        sessionDict[str(userId)] = str(uuid.uuid1())\n",
-    "        sessionId = sessionDict[str(userId)]\n",
+    "        session_dict[str(user_id)] = str(uuid.uuid1())\n",
+    "        session_id = session_dict[str(user_id)]\n",
     "        \n",
     "    # Configure Properties:\n",
     "    event = {\n",
-    "    \"itemId\": str(itemId),\n",
+    "    \"itemId\": str(item_id),\n",
     "    }\n",
     "    event_json = json.dumps(event)\n",
     "        \n",
     "    # Make Call\n",
     "    \n",
     "    personalize_events.put_events(\n",
-    "    trackingId = trackingId,\n",
-    "    userId= str(userId),\n",
-    "    sessionId = sessionId,\n",
+    "    trackingId = tracking_id,\n",
+    "    userId= str(user_id),\n",
+    "    sessionId = session_id,\n",
     "    eventList = [{\n",
     "        'sentAt': int(time.time()),\n",
-    "        'eventType': str(eventType),\n",
+    "        'eventType': str(event_type),\n",
     "        'properties': event_json\n",
     "        }]\n",
     "    )\n",
@@ -1270,8 +1255,8 @@
     "    movie_name = items_df.loc[movie_id_example]['TITLE']\n",
     "    \n",
     "    # Interact with different movies\n",
-    "    print('sending event ' + eventType + ' for ' + movie_name)\n",
-    "    send_movie_click(userId=user_id, itemId=item_id,eventType=event_type)\n",
+    "    print('sending event ' + event_type + ' for ' + movie_name)\n",
+    "    send_movie_click(user_id=user_id, item_id=item_id,event_type=event_type)\n",
     "    # Get the recommendations (note you should have a base recommendation DF created before)\n",
     "    time.sleep(2)\n",
     "    get_recommendations_response = personalize_runtime.get_recommendations(\n",
@@ -1288,7 +1273,7 @@
     "    for item in item_list:\n",
     "        movie = item['metadata']['title']\n",
     "        recommendation_list.append(movie)\n",
-    "    new_rec_df = pd.DataFrame(recommendation_list, columns = [movie_mame])\n",
+    "    new_rec_df = pd.DataFrame(recommendation_list, columns = [movie_name])\n",
     "    # Add this dataframe to the old one\n",
     "    #recommendations_df = recommendations_df.join(new_rec_DF)\n",
     "    recommendations_df = pd.concat([recommendations_df, new_rec_df], axis=1)\n",
@@ -1403,19 +1388,24 @@
    "source": [
     "def get_new_ranked_recommendations_df_by_static_filter(recommendations_df, user_id, rerank_item_list, filter_arn):\n",
     "    \n",
+    "    # Todo: update with new feature     \n",
     "    # Get the recommendations\n",
     "    get_recommendations_response = personalize_runtime.get_personalized_ranking(\n",
     "        campaignArn = workshop_rerank_campaign_arn,\n",
     "        userId = str(user_id),\n",
     "        inputList = rerank_item_list,\n",
-    "        filterArn = filter_arn\n",
+    "        filterArn = filter_arn,\n",
+    "        metadataColumns = {\n",
+    "            \"ITEMS\": ['TITLE']\n",
+    "        }\n",
     "    )\n",
     "    # Build a new dataframe of recommendations\n",
     "    item_list = get_recommendations_response['personalizedRanking']\n",
     "    recommendation_list = []\n",
     "    for item in item_list:\n",
-    "        movie = item['metadata']['title']\n",
-    "        recommendation_list.append(movie)\n",
+    "            movie = items_df.loc[item['itemId']]['TITLE']\n",
+    "            recommendation_list.append(movie)\n",
+    "\n",
     "\n",
     "    filter_name = filter_arn.split('/')[1]\n",
     "    new_rec_df = pd.DataFrame(recommendation_list, columns = [filter_name])\n",
@@ -1456,13 +1446,18 @@
     "    campaignArn = workshop_rerank_campaign_arn,\n",
     "    userId = str(rerank_user),\n",
     "    inputList = rerank_item_list,\n",
-    "    filterArn = filter_arn)\n",
+    "    filterArn = filter_arn,\n",
+    "    metadataColumns = {\n",
+    "        \"ITEMS\": ['TITLE']\n",
+    "    })\n",
     "\n",
     "item_list = ranked_unwatched_recommendations_response['personalizedRanking'][:4]\n",
     "\n",
+    "# Todo: update with new feature  \n",
+    "\n",
     "for item in item_list:\n",
-    "    print('sending event Watch for ' + item['metadata']['title'])\n",
-    "    send_movie_click(userId=rerank_user, itemId=item['itemId'], eventType='Watch')\n",
+    "    print('sending event Watch for ' + items_df.loc[item['itemId']]['TITLE'])\n",
+    "    send_movie_click(user_id=rerank_user, item_id=item['itemId'], event_type='Watch')\n",
     "    time.sleep(5)"
    ]
   },
@@ -1514,6 +1509,13 @@
     "%store region\n",
     "%store role_name"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
