--- a/Media/03_Inference.ipynb
+++ b/Media/03_Inference.ipynb
@@ -154,15 +154,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "workshop_recommender_more_like_x_arn"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -267,6 +258,25 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's sample some data from our dataset to test our \"More like X\" Recommender. Grab 5 random movies from our dataframe.\n",
+    "\n",
+    "Note: We are going to show similar titles, so you may want to re-run the sample until you recognize some of the movies listed"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "samples = items_df.sample(5)\n",
+    "samples"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -349,7 +359,10 @@
     "    item_list = get_recommendations_response['itemList']\n",
     "    recommendation_list = []\n",
     "    for item in item_list:\n",
-    "        movie = item['metadata']['title']\n",
+    "        try:\n",
+    "            movie = item['metadata']['title']\n",
+    "        except:\n",
+    "            movie = items_df.loc[item['itemId']]['TITLE']\n",
     "        recommendation_list.append(movie)\n",
     "    new_rec_df = pd.DataFrame(recommendation_list, columns = [user_id])\n",
     "    # Add this dataframe to the old one\n",
@@ -459,7 +472,10 @@
     "ranked_list = []\n",
     "item_list = get_recommendations_response_rerank['personalizedRanking']\n",
     "for item in item_list:\n",
-    "    movie = item['metadata']['title']\n",
+    "    try: \n",
+    "        movie = item['metadata']['title']\n",
+    "    except:\n",
+    "        movie = items_df.loc[item['itemId']]['TITLE']\n",
     "    ranked_list.append(movie)\n",
     "ranked_df = pd.DataFrame(ranked_list, columns = ['Re-Ranked'])\n",
     "rerank_df = pd.concat([rerank_df, ranked_df], axis=1)\n",
@@ -894,7 +910,10 @@
     "    promotion_list = []\n",
     "    recommendation_list = []\n",
     "    for item in itemList:\n",
-    "        movie = item['metadata']['title']\n",
+    "        try:\n",
+    "            movie = item['metadata']['title']\n",
+    "        except:\n",
+    "            movie = items_df.loc[item['itemId']]['TITLE']\n",
     "        try: \n",
     "            item[\"promotionName\"]\n",
     "            promotion_list.append('Y')\n",
@@ -1152,8 +1171,8 @@
     "    event_tracker_arn = create_event_tracker_response['eventTrackerArn']\n",
     "    print(json.dumps(create_event_tracker_response, indent=2))\n",
     "    print ('\\nCreating the event_tracker with event_tracker_arn = {}'.format(event_tracker_arn))\n",
-    "    trackingId = create_event_tracker_response['trackingId']\n",
-    "    print ('\\nAnd trackingId = {}'.format(trackingId))\n",
+    "    tracking_id = create_event_tracker_response['trackingId']\n",
+    "    print ('\\nAnd trackingId = {}'.format(tracking_id))\n",
     "    \n",
     "\n",
     "except personalize.exceptions.ResourceAlreadyExistsException as e:\n",
@@ -1170,7 +1189,7 @@
     "    \n",
     "    print ('\\nThe the Event Tracker with event_tracker_name {} already exists'.format(event_tracker_name))\n",
     "    print ('\\nWe will be using the existing Event Tracker with event_tracker_arn = {}'.format(event_tracker_arn))\n",
-    "    print ('\\nAnd trackingId = {}'.format(trackingId))"
+    "    print ('\\nAnd trackingId = {}'.format(tracking_id))"
    ]
   },
   {
@@ -1252,7 +1271,7 @@
     "\n",
     "def get_new_recommendations_df_users_real_time(recommendations_df, user_id, item_id, event_type):\n",
     "    # Get the artist name (header of column)\n",
-    "    movie_name = items_df.loc[movie_id_example]['TITLE']\n",
+    "    movie_name = items_df.loc[item_id]['TITLE']\n",
     "    \n",
     "    # Interact with different movies\n",
     "    print('sending event ' + event_type + ' for ' + movie_name)\n",
@@ -1304,12 +1323,12 @@
     "    )\n",
     "\n",
     "# Build a new dataframe for the recommendations\n",
-    "itemList = get_recommendations_response['itemList']\n",
-    "recommendationList = []\n",
+    "item_list = get_recommendations_response['itemList']\n",
+    "recommendation_list = []\n",
     "for item in item_list:\n",
     "    movie = item['metadata']['title']\n",
-    "    recommendationList.append(movie)\n",
-    "user_recommendations_df = pd.DataFrame(recommendationList, columns = [rerank_user])\n",
+    "    recommendation_list.append(movie)\n",
+    "user_recommendations_df = pd.DataFrame(recommendation_list, columns = [rerank_user])\n",
     "user_recommendations_df"
    ]
   },
