--- a/Media/01_Data_Preparation.ipynb
+++ b/Media/01_Data_Preparation.ipynb
@@ -27,15 +27,6 @@
     "1. [Prepare the Item Metadata](#prepare_items)\n",
     "1. [Prepare the Interactions Data](#prepare_interactions)\n",
     "1. [Prepare the User Metadata](#prepare_users)\n",
-    "1. [Creating Amazon Personalize Resources and Importing data](#import)\n",
-    "1. [Configure an S3 bucket and an IAM  role](#bucket_role)\n",
-    "1. [Group Dataset](#group_dataset)\n",
-    "1. [Create the Interactions Schema](#interact_schema)\n",
-    "1. [Create the Items(Movies) Schema](#items_schema)\n",
-    "1. [Create the Users Schema](#users_schema)\n",
-    "1. [Import the interactions data](#import_interactions)\n",
-    "1. [Import the Item Metadata](#import_items)\n",
-    "1. [Import the User Metadata](#import_users)\n",
     "\n",
     "\n",
     "## How to Use the Notebook <a class=\"anchor\" id=\"usenotebook\"></a>\n",
@@ -1083,7 +1074,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[Go to the next notebook `02_Amazon_Personalize_Resources_and_Data`](02_Amazon_Personalize_Resources_and_Data.ipynb) to continue."
+    "[Go to the next notebook `02_Data_Import`](02_Data_Import.ipynb) to continue."
    ]
   },
   {
