--- a/Media/02_Data_Import.ipynb
+++ b/Media/02_Data_Import.ipynb
@@ -9,7 +9,15 @@
     "\n",
     "## In this Notebook\n",
     "\n",
-    "TODO: Update\n",
+    "1. [Creating Amazon Personalize Resources and Importing data](#import)\n",
+    "1. [Configure IAM role](#iam_role)\n",
+    "1. [Create the Dataset Group](#group_dataset)\n",
+    "1. [Create the Interactions Schema](#interact_schema)\n",
+    "1. [Create the Items(Movies) Schema](#items_schema)\n",
+    "1. [Create the Users Schema](#users_schema)\n",
+    "1. [Import the interactions data](#import_interactions)\n",
+    "1. [Import the Item Metadata](#import_items)\n",
+    "1. [Import the User Metadata](#import_users)\n",
     "\n",
     "In this notebook, you will choose a dataset and prepare it for use with Amazon Personalize.\n",
     "\n",
@@ -55,6 +63,7 @@
    "metadata": {},
    "source": [
     "### IAM role\n",
+    "<a class=\"anchor\" id=\"iam_role\"></a>\n",
     "\n",
     "Amazon Personalize needs the ability to assume roles in AWS in order to have the permissions to execute certain tasks. \n",
     "\n",
