--- a/Media/03_Training.ipynb
+++ b/Media/03_Training.ipynb
@@ -16,7 +16,7 @@
     "1. [Using Evaluation Metrics](#usemetrics)\n",
     "1. [Storing useful variables](#vars)\n",
     "\n",
-    "To run this notebook, you need to have run [the previous notebook: `01_Data.ipynb`](01_Data.ipynb), where you prepared 3 datasets (item interactions, items and users) for use in Amazon Personalize. At the end of that notebook, you saved some of the variable values, which you now need to load into this notebook.\n",
+    "To run this notebook, you need to have run [the previous notebook: `02_Data_Import.ipynb`](02_Data_Import.ipynb), where you prepared 3 datasets (item interactions, items and users) for use in Amazon Personalize. At the end of that notebook, you saved some of the variable values, which you now need to load into this notebook.\n",
     "\n",
     "## Introduction <a class=\"anchor\" id=\"intro\"></a>\n",
     "\n",
@@ -770,7 +770,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "You're all set to move on to [the exploratory notebook `03_Inference.ipynb`](03_Inference.ipynb). Open it from the browser and you can start interacting with the Recommenders and Campaign and getting recommendations!"
+    "You're all set to move on to [the exploratory notebook `04_Inference.ipynb`](04_Inference.ipynb). Open it from the browser and you can start interacting with the Recommenders and Campaign and getting recommendations!"
    ]
   },
   {
