change data dir

--- a/Media/01_Data_Preparation.ipynb
+++ b/Media/01_Data_Preparation.ipynb
@@ -371,7 +371,7 @@
    "outputs": [],
    "source": [
     " # copy IMDB data\n",
-    "!aws s3 cp s3://personalize-solution-staging-us-east-1/personalize-immersionday-media/imdb/items.csv $imdb_dir"
+    "!aws s3 cp s3://personalize-solution-staging-us-east-1/personalize-immersionday-media/imdb/items.csv $imdb_dir\n"
    ]
   },
   {
